--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,322 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <style type="text/css">
+      .global-loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        opacity: 1;
+        transition: opacity 0.5s ease-in-out;
+      }
+
+      .global-loader-fade-in {
+        opacity: 0;
+      }
+
+      .global-loader-hidden {
+        display: none;
+      }
+
+      .global-loader h1 {
+        font-family: 'Helvetica Neue', Helvetica, sans-serif;
+        font-weight: normal;
+        font-size: 24px;
+        letter-spacing: 0.04rem;
+        white-space: pre;
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-image: repeating-linear-gradient(
+          to right,
+          #f44336,
+          #9c27b0,
+          #3f51b5,
+          #03a9f4,
+          #009688,
+          #8bc34a,
+          #ffeb3b,
+          #ff9800
+        );
+        background-size: 750% auto;
+        background-position: 0 100%;
+        animation: gradient 20s infinite;
+        animation-fill-mode: forwards;
+        animation-timing-function: linear;
+      }
+
+      @keyframes gradient {
+        0% {
+          background-position: 0 0;
+        }
+
+        100% {
+          background-position: -750% 0;
+        }
+      }
+
+      #floatingCirclesG,
+      #preloader {
+        position: absolute;
+        top: 0;
+        bottom: 125px;
+        left: 0;
+        right: 0;
+        width: 51px;
+        height: 51px;
+        margin: auto;
+        transform: scale(0.6);
+        -o-transform: scale(0.6);
+        -ms-transform: scale(0.6);
+        -webkit-transform: scale(0.6);
+        -moz-transform: scale(0.6);
+      }
+
+      .f_circleG {
+        position: absolute;
+        background-color: rgb(255, 255, 255);
+        height: 9px;
+        width: 9px;
+        border-radius: 5px;
+        -o-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        animation-name: f_fadeG;
+        -o-animation-name: f_fadeG;
+        -ms-animation-name: f_fadeG;
+        -webkit-animation-name: f_fadeG;
+        -moz-animation-name: f_fadeG;
+        animation-duration: 0.622s;
+        -o-animation-duration: 0.622s;
+        -ms-animation-duration: 0.622s;
+        -webkit-animation-duration: 0.622s;
+        -moz-animation-duration: 0.622s;
+        animation-iteration-count: infinite;
+        -o-animation-iteration-count: infinite;
+        -ms-animation-iteration-count: infinite;
+        -webkit-animation-iteration-count: infinite;
+        -moz-animation-iteration-count: infinite;
+        animation-direction: normal;
+        -o-animation-direction: normal;
+        -ms-animation-direction: normal;
+        -webkit-animation-direction: normal;
+        -moz-animation-direction: normal;
+      }
+
+      #frotateG_01 {
+        left: 0;
+        top: 21px;
+        animation-delay: 0.2295s;
+        -o-animation-delay: 0.2295s;
+        -ms-animation-delay: 0.2295s;
+        -webkit-animation-delay: 0.2295s;
+        -moz-animation-delay: 0.2295s;
+      }
+
+      #frotateG_02 {
+        left: 6px;
+        top: 6px;
+        animation-delay: 0.316s;
+        -o-animation-delay: 0.316s;
+        -ms-animation-delay: 0.316s;
+        -webkit-animation-delay: 0.316s;
+        -moz-animation-delay: 0.316s;
+      }
+
+      #frotateG_03 {
+        left: 21px;
+        top: 0;
+        animation-delay: 0.3925s;
+        -o-animation-delay: 0.3925s;
+        -ms-animation-delay: 0.3925s;
+        -webkit-animation-delay: 0.3925s;
+        -moz-animation-delay: 0.3925s;
+      }
+
+      #frotateG_04 {
+        right: 6px;
+        top: 6px;
+        animation-delay: 0.469s;
+        -o-animation-delay: 0.469s;
+        -ms-animation-delay: 0.469s;
+        -webkit-animation-delay: 0.469s;
+        -moz-animation-delay: 0.469s;
+      }
+
+      #frotateG_05 {
+        right: 0;
+        top: 21px;
+        animation-delay: 0.5455s;
+        -o-animation-delay: 0.5455s;
+        -ms-animation-delay: 0.5455s;
+        -webkit-animation-delay: 0.5455s;
+        -moz-animation-delay: 0.5455s;
+      }
+
+      #frotateG_06 {
+        right: 6px;
+        bottom: 6px;
+        animation-delay: 0.622s;
+        -o-animation-delay: 0.622s;
+        -ms-animation-delay: 0.622s;
+        -webkit-animation-delay: 0.622s;
+        -moz-animation-delay: 0.622s;
+      }
+
+      #frotateG_07 {
+        left: 21px;
+        bottom: 0;
+        animation-delay: 0.6985s;
+        -o-animation-delay: 0.6985s;
+        -ms-animation-delay: 0.6985s;
+        -webkit-animation-delay: 0.6985s;
+        -moz-animation-delay: 0.6985s;
+      }
+
+      #frotateG_08 {
+        left: 6px;
+        bottom: 6px;
+        animation-delay: 0.775s;
+        -o-animation-delay: 0.775s;
+        -ms-animation-delay: 0.775s;
+        -webkit-animation-delay: 0.775s;
+        -moz-animation-delay: 0.775s;
+      }
+
+      @keyframes f_fadeG {
+        0% {
+          background-color: rgb(0, 0, 0);
+        }
+        100% {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+
+      @-o-keyframes f_fadeG {
+        0% {
+          background-color: rgb(0, 0, 0);
+        }
+        100% {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+
+      @-ms-keyframes f_fadeG {
+        0% {
+          background-color: rgb(0, 0, 0);
+        }
+        100% {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+
+      @-webkit-keyframes f_fadeG {
+        0% {
+          background-color: rgb(0, 0, 0);
+        }
+        100% {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+
+      @-moz-keyframes f_fadeG {
+        0% {
+          background-color: rgb(0, 0, 0);
+        }
+        100% {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+
+      .cssload-speeding-wheel {
+        width: 64px;
+        height: 64px;
+        margin: 0 auto;
+        border: 2px solid rgba(97, 100, 193, 0.98);
+        border-radius: 50%;
+        border-left-color: transparent;
+        border-right-color: transparent;
+        animation: cssload-spin 425ms infinite linear;
+        -o-animation: cssload-spin 425ms infinite linear;
+        -ms-animation: cssload-spin 425ms infinite linear;
+        -webkit-animation: cssload-spin 425ms infinite linear;
+        -moz-animation: cssload-spin 425ms infinite linear;
+      }
+
+      @keyframes cssload-spin {
+        100% {
+          transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+
+      @-o-keyframes cssload-spin {
+        100% {
+          -o-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+
+      @-ms-keyframes cssload-spin {
+        100% {
+          -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+
+      @-webkit-keyframes cssload-spin {
+        100% {
+          -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+
+      @-moz-keyframes cssload-spin {
+        100% {
+          -moz-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+
+      #loading {
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: rgba(255, 255, 255, 0.7);
+      }
+    </style>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
+    <div id="globalLoader" class="global-loader">
+      <div id="preloader">
+        <div class="cssload-speeding-wheel"></div>
+      </div>
+      <h1>LOADING</h1>
+    </div>
+    <div id="loading">
+      <div id="floatingCirclesG">
+        <div class="f_circleG" id="frotateG_01"></div>
+        <div class="f_circleG" id="frotateG_02"></div>
+        <div class="f_circleG" id="frotateG_03"></div>
+        <div class="f_circleG" id="frotateG_04"></div>
+        <div class="f_circleG" id="frotateG_05"></div>
+        <div class="f_circleG" id="frotateG_06"></div>
+        <div class="f_circleG" id="frotateG_07"></div>
+        <div class="f_circleG" id="frotateG_08"></div>
+      </div>
+    </div>
   </body>
 </html>
